--- a/week1/week1.html
+++ b/week1/week1.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day 1 of Summer</title>
+    <link rel="stylesheet" href="week1.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="notifiation">
-      <p>Summer Just Started!</p>
+    <div class="border">
+      <div class="window left-window"></div>
+      <div id="notification">
+        <p>
+          <i class="fas fa-info-circle"></i>Summer Just Started!
+          <span class="close">&times;</span>
+        </p>
+      </div>
+
+      <div id="phone">
+        <p class="phone-heading">What should I do?</p>
+        <div class="option" onclick="handleOptionClick('tiktok')">
+          Scroll Tiktok for 1... 2.... 3... hours
+        </div>
+        <div class="option" onclick="handleOptionClick('youtube')">
+          Watch Youtube
+        </div>
+        <div class="option" onclick="handleOptionClick('sleep')">
+          Get More Sleep
+        </div>
+        <div class="option" onclick="handleOptionClick('work')">
+          Actually start working 🥱
+        </div>
+      </div>
+      <div class="window right-window"></div>
     </div>
+
+    <script src="week1.js"></script>
   </body>
 </html>
