--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       html,
       body,
